tests/baselines/reference/typeUsedAsValueError2.errors.txt
world.ts(4,1): error TS2693: 'HelloInterface' only refers to a type, but is being used as a value here.
world.ts(5,1): error TS2708: Cannot use namespace 'HelloNamespace' as a value.


==== world.ts (2 errors) ====
    import HelloInterface = require("helloInterface");
    import HelloNamespace = require("helloNamespace");
    
    HelloInterface.world;
    ~~~~~~~~~~~~~~
!!! error TS2693: 'HelloInterface' only refers to a type, but is being used as a value here.
    HelloNamespace.world;
    ~~~~~~~~~~~~~~
!!! error TS2708: Cannot use namespace 'HelloNamespace' as a value.
==== helloInterface.ts (0 errors) ====
    interface HelloInterface {
        world: any;
    }
    
    export = HelloInterface;
    
==== helloNamespace.ts (0 errors) ====
    namespace HelloNamespace {
        export type world = any;
    }
    
    export = HelloNamespace;
    